Add functionality to make dynamic address lookup from user input

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jpdhernandez/node-weather-app#readme",
   "dependencies": {
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "yargs": "^6.6.0"
   }
 }
