--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jpdhernandez/node-weather-app#readme",
   "dependencies": {
     "request": "^2.79.0",
+    "strftime": "^0.10.0",
     "yargs": "^6.6.0"
   }
 }
